--- a/calc2.html
+++ b/calc2.html
@@ -53,7 +53,7 @@
     <footer>
         <table>
             <tr>
-                <td><a href="calc2.html" alt="Anterior Calculadora">Anterior Calculadora</a></td>
+                <td><a href="index.html" alt="Anterior Calculadora">Anterior Calculadora</a></td>
                 <td><pre>Lucas Monteiro</pre></td>
                 <td><a href="calc3.html" alt="Proxima Calculadora">Proxima Calculadora</a></td>
                 </tr>
