--- a/calc3.html
+++ b/calc3.html
@@ -68,9 +68,9 @@
     <footer>
         <table>
             <tr>
-                <td><a href="index.html" alt="Anterior Calculadora">Anterior Calculadora</a></td>
+                <td><a href="calc2.html" alt="Anterior Calculadora">Anterior Calculadora</a></td>
                 <td><pre>Lucas Monteiro</pre></td>
-                <td><a href="calc2.html" alt="Proxima Calculadora">Proxima Calculadora</a></td>
+                <td><a href="calc4.html" alt="Proxima Calculadora">Proxima Calculadora</a></td>
                 </tr>
         </table>
     </footer>
