--- a/calc2 copy.html
+++ b/calc2 copy.html
@@ -2,76 +2,60 @@
 
 <head>
     <title>Calculadora </title>
-    <link rel="stylesheet" href="style3.css">
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
     <div>
         <header id="titulo">
             <table>
-                <td style="width:400px">
+                <td>
                     <p>CALCULADORA</p>
                 </td>
                 <td><input type="button" value="_" /></td>
                 <td><input type="button" value="D" /></td>
                 <td><input type="button" value="X" /></td>
-                
             </table>
         </header>
         <input id="result" type="text" id="resultado" />
         <table>
             <tr>
-                <td colspan="6"><input id="back" type="button" value="Backspace" /></td>
+                <td colspan="2"><input id="back" type="button" value="BCSPC" /></td>
                 <td><input id="ce" type="button" value="CE" /></td>
                 <td><input id="c" type="button" value="C" /></td>
             </tr>
             <tr>
-                <td><input id="sen" type="button" value="sen" /></td>
-                <td><input id="cos" type="button" value="cos" /></td>
-                <td><input id="tan" type="button" value="tan" /></td>
-                <td><input id="MC" type="button" value="MC" /></td>
                 <td><input id="b1" type="button" value="1" /></td>
                 <td><input id="b2" type="button" value="2" /></td>
                 <td><input id="b3" type="button" value="3" /></td>
                 <td><input id="divi" type="button" value="/" /></td>
             </tr>
-            <tr><td><input id="sinh" type="button" value="sinh" /></td>
-                <td><input id="cosh" type="button" value="cosh" /></td>
-                <td><input id="tanh" type="button" value="tanh" /></td>
-                <td><input id="n" type="button" value="n!" /></td>
-                                <td><input id="b4" type="button" value="4" /></td>
+            <tr>
+                <td><input id="b4" type="button" value="4" /></td>
                 <td><input id="b5" type="button" value="5" /></td>
                 <td><input id="b6" type="button" value="6" /></td>
-                <td><input id="divi" type="button" value="*" /></td>
-           </tr>
-            <tr><td><input id="prct" type="button" value="'%'" /></td>
-                <td><input id="quad" type="button" value="X²" /></td>
-                <td><input id="cub" type="button" value="X³" /></td>
-                <td><input id="multi" type="button" value="1/x" /></td>
+                <td><input id="multi" type="button" value="X" /></td>
+            </tr>
+            <tr>
                 <td><input id="b7" type="button" value="7" /></td>
                 <td><input id="b8" type="button" value="8" /></td>
                 <td><input id="b9" type="button" value="9" /></td>
                 <td><input id="men" type="button" value="-" /></td>
-                </tr>
+            </tr>
             <tr>
-                <td><input id="mod" type="button" value="mod" /></td>
-                <td><input id="exp" type="button" value="exp" /></td>
-                <td><input id="log" type="button" value="log" /></td>
-                <td><input id="xy" type="button" value="xY" /></td>
                 <td><input id="p" type="button" value="." /></td>
                 <td><input id="b0" type="button" value="0" /></td>
                 <td><input id="res" type="button" value="=" /></td>
                 <td><input id="mais" type="button" value="+" /></td>
-                </tr>
+            </tr>
         </table>
     </div>
     <footer>
         <table>
             <tr>
-                <td><a href="calc2.html" alt="Anterior Calculadora">Anterior Calculadora</a></td>
+                <td><a href="index.html" alt="Anterior Calculadora">Anterior Calculadora</a></td>
                 <td><pre>Lucas Monteiro</pre></td>
-                <td><a href="calc4.html" alt="Proxima Calculadora">Proxima Calculadora</a></td>
+                <td><a href="calc3.html" alt="Proxima Calculadora">Proxima Calculadora</a></td>
                 </tr>
         </table>
     </footer>
