--- a/calc4.html
+++ b/calc4.html
@@ -57,7 +57,7 @@
                 <td>
                     <pre>Lucas Monteiro</pre>
                 </td>
-                <td><a href="index.html" alt="Proxima Calculadora">Proxima Calculadora</a></td>
+                <td><a href="calc5.html" alt="Proxima Calculadora">Proxima Calculadora</a></td>
             </tr>
         </table>
     </footer>
