--- a/calc2.html
+++ b/calc2.html
@@ -3,6 +3,7 @@
 <head>
     <title>Calculadora </title>
     <link rel="stylesheet" href="style2.css">
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
