--- a/calc5.html
+++ b/calc5.html
@@ -96,7 +96,7 @@
                 <td>
                     <pre>Lucas Monteiro</pre>
                 </td>
-                <td><a href="index.html" alt="Proxima Calculadora">Proxima Calculadora</a></td>
+                <td><a href="calc1maisscritp.html" alt="Proxima Calculadora">Proxima Calculadora</a></td>
             </tr>
         </table>
     </footer>
